--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 											<li><input type="reset" value="Limpar Formulario" class="alt" /></li>
 										</ul>
 										<input type="hidden" name="accessKey" value="0e278238-759a-4b9e-947e-b250d7a027b2">
-										<input type="hidden" name="redirectTo" value="return.html" >
+										<input type="hidden" name="redirectTo" value="https://srnomu.github.io/resume.thankyoupage/" >
 									</div>
 								</div>
 							</form>
