--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 					<header>
 						<h2>CONTATO</h2>
 						<p>Entre em contato comigo pelo...</p>
-						<p>E-mail ( pedro_henrique_@outlook.com.br )</p>
-						<p>Tel / Whatsapp +55 (21) 99713-6732</p>
+						<p>E-mail (pedro_henrique_@outlook.com.br) Tel/WhatsApp: +55 (21) 99713-6732</p>
+						Tel / Whatsapp +55 (21) 99713-6732
 						<p>Ou se preferir pelo formulário abaixo : )</p>
 					</header>
 					<div class="row">
