--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
 					<header>
 						<h2>CONTATO</h2>
 						<p>Entre em contato comigo pelo...</p>
-						<p>E-mail (pedro_henrique_@outlook.com.br) Tel/WhatsApp: +55 (21) 99713-6732</p>
-						Tel / Whatsapp +55 (21) 99713-6732
+						<p>E-mail: pedro_henrique_@outlook.com.br | Tel / Whatsapp: +55 (21) 99713-6732</p>
 						<p>Ou se preferir pelo formulário abaixo : )</p>
 					</header>
 					<div class="row">
@@ -209,13 +208,13 @@
 							<hr />
 							<h3>Encontre me em ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://twitter.com/home" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/profile.php?id=100085637032314" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/pedro-henrique-448234217/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/SrNomu" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
