--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>HOBBIES</h3>
-								<p>Trabalho informalmente como editor de vídeos e me divirto fazendo isso, gosto de musica. video games e de ler livros. </p>
+								<p>Trabalho informalmente como editor de vídeos e me divirto fazendo isso, gosto de música. video games e de ler livros. </p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -96,8 +96,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.png" alt="" /></a>
-								<h3><a href="https://www.gov.br/agu/pt-br">AGU (Adivocacia geral da união)</a></h3>
-								<p>Fui pro 1 ano estágio na AGU (Adivocacia geral da união) em Duque de Caxias.</p>
+								<h3><a href="https://www.gov.br/agu/pt-br">AGU (Advocacia geral da união)</a></h3>
+								<p>Fui pro 1 ano estágio na AGU (Advocacia geral da união) em Duque de Caxias.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
